# kubeseer-observability-gui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.kiro/specs/kube-observe-gui/: .config.kiro  competitive-analysis.md  demo-script.md  design.md  iteration-log.md  phase13-polish-plan.md  requirements.md  tasks.md
benches/: resource_graph.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: phase10_alerting.test.ts  phase11_export.test.ts  phase12_integration.test.ts  phase13_assistant.test.ts  phase5_topology.test.ts  phase6_logs.test.ts  phase7_metrics.test.ts  phase8_traces.test.ts  phase9_multicluster.test.ts
frontend/src/components/common/: AccountMenu.tsx  AssistantPanel.tsx  ClusterSelector.tsx  CommandPalette.tsx  Dropdown.tsx  HealthBar.tsx  NotificationFeed.tsx  PodDetailDrawer.tsx  SearchBar.tsx  ShortcutsHelp.tsx  ThemeToggle.tsx  ToastContainer.tsx  index.ts
frontend/src/components/layout/: Sidebar.tsx  StatusBar.tsx
frontend/src/components/logs/: LogSearch.tsx  LogViewer.tsx  index.ts
frontend/src/components/metrics/: DeploymentTimeline.tsx  GoldenSignals.tsx  MetricsDashboard.tsx  ResourceGauge.tsx  TimeSeriesChart.tsx  index.ts
frontend/src/components/topology/: PodTooltip.tsx  ServiceMap.tsx  TopologyControls.tsx  TopologyView.tsx  index.ts  layout-engine.ts
frontend/src/components/traces/: TraceExplorer.tsx  WaterfallView.tsx  index.ts
frontend/src/hooks/: useKeyboardShortcuts.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: export.ts  json-patch.ts  mock-data.ts  mock-metrics-store.ts  troubleshoot-engine.ts  ws-client.ts
frontend/src/stores/: cluster.ts  logs.ts  metrics.ts  ui.ts
frontend/src/styles/: global.css
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  rest.rs  static_files.rs  websocket.rs
src/auth/: kubeconfig.rs  middleware.rs  mod.rs  session.rs
src/cluster/: connection.rs  mod.rs  resource_graph.rs  watcher.rs
src/plugins/: mod.rs
src/query/: mod.rs
tests/: phase1_integration.rs  phase2_auth.rs  phase3_resource_graph.rs  phase4_websocket.rs
(+2 files in other folders)
