[package]
name = "kubeobserve"
version = "0.1.0"
edition = "2021"
description = "A high-performance, secure Kubernetes observability GUI"
license = "Apache-2.0"
repository = "https://github.com/kubeobserve/kubeobserve"
readme = "README.md"
keywords = ["kubernetes", "observability", "monitoring", "dashboard", "gui"]
categories = ["command-line-utilities", "visualization", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Kubernetes client
kube = { version = "0.98", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Authentication
jsonwebtoken = "9"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "5"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Embedded frontend assets
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
bytes = "1"
pin-project-lite = "0.2"
open = "5"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "resource_graph"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
